--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+SEMPRE LEMBRAR DE COMPILAR OS PACKAGES DE TERCEIROS DENTRO DA PASTA INCLUDES DO PROJETO.
+
 @todo Create Image Class
 @todo create Component Cube Class, where is possible pass Texture
 @todo Create Player Class, and create first Player Character
